--- a/index.css
+++ b/index.css
@@ -61,7 +61,7 @@ button:hover {
   transition: opacity 1s;
 }
 
-#respota div{
+#resposta div{
   font-size: 16px;
   font-weight: normal;
   opacity: 0.9;
