--- a/index.css
+++ b/index.css
@@ -4,49 +4,136 @@
 }
 
 body {
-  background-color: black;
+  background: linear-gradient(30deg, #182C51, #09101E);
   color: white; 
   text-align: center;
   font-family: sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+.bubbles
+{
+  position: relative;
+  display: flex;
+}
+
+.bubbles span 
+{
+  position: relative;
+  width: 30px;
+  height: 30px;
+  background: #4fc3dc;
+  margin: 0 4px; 
+  border-radius: 50%;
+  box-shadow: 0 0 0 10px #4fc3dc44,
+  0 0 50px #4fc3dc,
+  0 0 100px #4fc3dc; 
+  animation:  animate 15s linear infinite; 
+}
+.bubbles span:nth-child(even)
+{
+  background: #c3cfd1;
+  box-shadow: 0 0 0 10px #a8cfd844,
+  0 0 50px #4fc3dc,
+  0 0 100px #4fc3dc;
+}
+@keyframes animate
+{
+  0%
+  {
+    transform: translateY(50vh) scale(0);
+  }
+  100%
+  {
+    transform: translateY(-10vh) scale(1);
+  }
+}
 
 #container {
   margin-top: 100px;
   width: 80%;
   max-width: 400px; 
-  margin-inline: auto;
 }
 
+
 h1 {
-  margin-top: 40px;
-  margin-bottom: 10px;
-  opacity: 0.9;
+  font-family: 'Yatra One', cursive;
+  font-size:50px;
 }
+
+.content h1 
+{
+  position: absolute;
+  margin-top: 120px;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.5s;
+  pointer-events: none;
+  font-family: 'Yatra One', cursive;
+
+}
+
 
 p {
   margin-bottom: 40px;
   opacity: 0.7;
+  margin-top: 20px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: 'Yatra One', cursive;
 }
 
 input, button {
   display: block;
-  width: 100%;
+  width:80%;
   padding: 20px;
   font-size: 20px;
   border-radius: 4px;
+  color: black; 
 
 }
 
 input {
-  margin-bottom: 20px;
+    position: relative;
+    margin-top: 80px;
+    font-family: 'Yatra One', cursive;
+    font-size: 20px;
+    margin-bottom:1rem;
+    box-shadow: none;
+    outline:none;
+    border:0;
+
+}
+
+#inputPergunta::placeholder {
+  color:white;
+}
+
+#inputPergunta 
+{
+background: transparent;
+width: 100%;
+height: 50%;
+color: rgb(233, 225, 225); 
+border:none; 
+text-align: center;
 }
 
 button {
+  margin-top: -150px;
   border: none; 
-  background-color: blueviolet;
-  color: white; 
-  transition: filter .2s; 
+  background-color: transparent;
+  color: rgb(243, 237, 237); 
+  width: 150px;
+  font-weight: bold;
+  margin-left: 100px;
+  font-family: 'Yatra One', cursive;
+  position:absolute;
+  margin-left: 50px;
 }
 
 /* pseudo-class */
@@ -56,14 +143,85 @@ button:hover {
 }
 
 #resposta {
-  margin-top: 30px;
-
-  transition: opacity 1s;
+background-color:transparent;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;  
+width: 250px;
+height: 250px;
+border-radius: 50%;
+box-shadow: inset 10px 10px 10px rgba(0,0,0,0.05),
+              15px 25px 10px rgba(0,0,0,0.1),
+              15px 20px 20px rgba(0,0,0,0.5); 
+color: rgb(246, 241, 241); 
+font-family: 'Yatra One', cursive;
+margin-left: 200px;
+padding: 10px;
 }
 
-#resposta div{
-  font-size: 16px;
-  font-weight: normal;
-  opacity: 0.9;
-  margin-bottom: 10px;
+#resposta::before{
+  background-color: black;
+}
+
+.moon
+{
+  position: relative ;
+  width: 356px;
+  height: 356px;
+  border-radius: 50%;
+  background: linear-gradient(30deg, #13223f, #0e1a30); 
+  display: flex;
+  
+}
+
+.moon:before 
+{
+  content: "";
+  position:absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: #C2C5C0;
+  animation: 3.2s cresent linear infinite alternate;
+  z-index: -1; 
+  display: block;
+}
+@keyframes cresent{
+  0%{
+    transform: translate(-30px, 30px) scale(0.9);
+    box-shadow: none;
+  }
+  50% {
+      transform: translate(0,0) scale(1.02); 
+      box-shadow: 0 0 10px #f9f3f2, 0 0 80px #C2C5C0
+  }
+  100%{
+    transform: translate(30px, -30px) scale(0.9);
+    box-shadow: none;
+  }
+}
+
+.triangle ion-icon
+{
+  font-size: 25vh;
+  transition: 0.5s ease-in-out;
+}
+
+.triangle:hover ion-icon
+{
+  filter: drop-shadow(0 0 20px #e03ae6)
+  drop-shadow(0 0 30px #e03ae6)
+  drop-shadow(0 0 60px #e03ae6)
+  drop-shadow(0 0 100px #e03ae6)
+  drop-shadow(0 0 150px #e03ae6);
+}
+.container-2
+{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: stretch;
+  justify-content: space-evenly;
+  align-items: stretch;
 }
